# polytheistic

./: Cargo.toml  LICENSE-MIT  README.md
obj_files/: README.md
src/: lib.rs  main.rs
src/poly/: main.rs
